--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Menù Ristorante Fior Di Loto</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=MENU.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="MENU.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
