--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Menù Ristorante Fior Di Loto</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="MENU.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <script type="text/javascript">
+      document.location = "fiordiloto.github.io/MENU.pdf"
+    </script>
   </body>
 </html>
