--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <script type="text/javascript">
-      document.location = "fiordiloto.github.io/MENU.pdf"
+      document.location = "MENU.pdf"
     </script>
   </body>
 </html>
