--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <title>Menù Ristorante Fior Di Loto</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <script type="text/javascript">
-      document.location = "MENU.pdf"
-    </script>
+    <embed src="https://raw.githubusercontent.com/FiorDiLoto/FiorDiLoto.github.io/main/MENU.pdf" class="application/pdf" width = "100%" height="100%" />	
   </body>
 </html>
