--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Menù Ristorante Fior Di Loto</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <embed src="https://raw.githubusercontent.com/FiorDiLoto/FiorDiLoto.github.io/main/MENU.pdf" class="application/pdf" width = "100%" height="100%" />	
+    <iframe src="https://raw.githubusercontent.com/FiorDiLoto/FiorDiLoto.github.io/main/MENU.pdf" class="application/pdf" width = "100%" height="100%"></iframe>	
   </body>
 </html>
