--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Menù Ristorante Fior Di Loto</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="MENU.pdf#toolbar=0&amp;navpanes=0&amp;scrollbar=0" class="application/pdf" width="100%" height="100%"></iframe>
+    <iframe src="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/FiorDiLoto/FiorDiLoto.github.io/main/MENU.pdf&amp;embedded=true" frameborder="0" height="100%" width="100%"></iframe>
   </body>
 </html>
