--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menù Ristorante Fior Di Loto</title>
+  <style type="text/css">
+    html, body {
+    margin: 0;
+    height: 100%;
+    }
+  </style>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
+  <body>
     <iframe src="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/FiorDiLoto/FiorDiLoto.github.io/main/MENU.pdf&amp;embedded=true" frameborder="0" height="100%" width="100%"></iframe>
   </body>
 </html>
